gcc/testsuite/algol68/compile/error-mode-stropping-8.a68
begin long int j;
      j := "joo" { dg-error "char.*long int" }
end
